test of Map, TreeSet, List and implementation of StackInt